@@ -1,5 +1,7 @@
   - now using native Moose attribute traits, instead of the deprecated
     MooseX::AttributeHelper (thanks, Justin Hunter!)
+  - now using namespace::autoclean rather than namespace::clean (thanks, Karen
+    Etheridge!)
 1.003013
   - Make Sys::SigAction optional dependency for Win32 systems
   - Apply some plugin related patchs from Caleb Cushing
